--- a/quickstart/config.toml
+++ b/quickstart/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://arvians-id.github.io/'
+baseURL = 'https://arvians-id.github.io/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'ananke'
